# react-webpack-playground

./: .babelrc  .eslintrc  .gitignore  GitVersion.yml  jest.config.js  jsconfig.json  package-lock.json  package.json  react-webpack-playground-1.0.0-big-bundle-fix.23.tgz  readme.md  webpack.config.js
config/: webpack.base.config.js  webpack.demo.config.js  webpack.lib.config.js
demo/: index.html  index.js  sampleReactComponent.js  sampleReactProject.js
parser/: Cargo.toml
parser/src/: index.rs
parser/src/parser/: cached_code.rs  helpers.rs  mod.rs
playground-client/: .babelrc  .eslintrc.js  .prettierrc  package-lock.json  package.json  writeVersion.js
playground-client/config/: webpack.base.config.js  webpack.demo.config.js  webpack.lib.config.js
playground-client/demo/: index.html  index.js  sampleReactProject.js
playground-client/src/: PlaygroundContext.js  index.js
src/: Playground.js  Playground.scss  contextReducer.js  fileExtensions.js  index.js  simple-grid.scss
src/Components/: Checkbox.js
src/Menu/: Menu.scss  ProjStructure.js  ProjStructure.scss  ProjectStructure.js  index.js
src/display/: DynamicBody.js  ErrorsBoundary.js  ErrorsExplained.js  display.scss  index.js
src/editor/: CodeEditor.js  EditorTab.js  editor.scss  editorMode.js  getKeywithCount.js  index.js  tabDirection.js
src/parser/: ErrorExplained.js  helpers.js  index.js  stage.js  use4DynamicEsModules.js  webpackInvoker.js
src/sideMenu/: SideMenu.scss  hamburger.scss  index.js
src/themes/: charcoal.css  default.css  unicorns.css
src/transpiling/: helpers.js  stage.js  (+6 more)
(+52 files in other folders)
