[package]
name = "project-parser"
version = "0.1.0"
authors = ["marcelo-ferraz <marcelosfm@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/index.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
serde =  { version = "1.0.126", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
web-sys = { version = "0.3.51", features = [ "console" ] }
js-sys = "0.3.51"